Fix QQuickTextEdit::hoveredLink

Task-number: QTBUG-31646
Change-Id: Iae4f664ed919f535511f635f2e4ab1006e3c28e5
Reviewed-by: Alan Alpert <aalpert@blackberry.com>